--- a/src/styles/sections/Accordion.module.css
+++ b/src/styles/sections/Accordion.module.css
@@ -8,6 +8,7 @@
 
 .main {
   max-width: 880px;
+  margin: auto;
   padding: 60px 10px;
 }
 
@@ -59,4 +60,10 @@
 
 .main .accordion-content {
   margin-left: 60px;
+}
+
+@media screen and (max-width: 1024px) {
+  .main .accordion-label {
+    width: 95%;
+  }
 }
